@@ -1,3 +1,8 @@
+[B]Version 1.0.7[/B]
+
+- fix early week roll-over in timezones larger than GMT-5 (eg: Australia)
+- remove useless call to configuration webservice
+
 [B]Version 1.0.6[/B]
 
 - fix use of undefined variable
